# stock

./: .dockerignore  .env.example  .gitignore  .vercelignore  DESIGN.md  Dockerfile  README.md  SIA-Score-UI-Demo.command  demo_app.py  next.config.ts  package-lock.json  package.json  requirements.txt  supabase_stock_ai_judgments.sql  supabase_stock_score_snapshots.sql  vercel.json
docs/: industry-data-sources.md  provider-evaluation-2026-06.md  score-data-enrichment-review.md  score-system-operations.md
scripts/: backfill_kr_dart_filings.ts  backfill_sec_filings.ts  backfill_sec_filings_from_index.ts  backfill_symbol_profiles.py  docker-build-market-data.sh  enqueue_stale_quote_snapshots.ts  enqueue_stale_score_snapshots.ts  fetch_stock_score.py  fetch_yfinance_score.py  finviz_industry_taxonomy.py  industry_quality_audit.py  load_test_stock_latency.d.mts  load_test_stock_latency.mjs  localEnv.ts  plan_stock_refresh_jobs.ts  publish_stock_snapshots.py  publish_stock_snapshots.ts  run_industry_maintenance.py  run_python.sh  score_smoke_check.py  seed_industry_taxonomy_map.py  seed_stock_refresh_targets.ts  stock_market_open_guard.ts  stock_operations_report.py  stock_operations_report.ts  supabase-cli.ps1  (+11 more)
services/market-data/: Cargo.toml
services/market-data/src/: auth.rs  cache.rs  config.rs  http.rs  jobs.rs  lib.rs  main.rs  market.rs  quote_contract.rs  rate_limit.rs  score.rs  service.rs
services/market-data/src/provider/: kis.rs  mod.rs  models.rs
services/market-data/tests/: http_contract.rs  kis_provider.rs  phase1_pipeline.rs  phase2_score_engine.rs
(+424 files in other folders)
